--- a/css/common.css
+++ b/css/common.css
@@ -150,6 +150,10 @@ button, select, input, textarea {
     row-gap: 10px;
 }
 
+.row-gap-20 {
+    row-gap: 20px;
+}
+
 .grid.center-aligned,
 .flex.center-aligned {
     justify-content: center;
@@ -181,6 +185,10 @@ button, select, input, textarea {
 
 .justify-self-center {
     justify-self: center;
+}
+
+.grid-column-span-2 {
+    grid-column: span 2;
 }
 
 /* Display & Visibility */
@@ -216,6 +224,10 @@ button, select, input, textarea {
 
 .text-align-left {
     text-align: left;
+}
+
+.text-align-right {
+    text-align: right;
 }
 
 /* Color */
@@ -559,5 +571,9 @@ button, select, input, textarea {
 
     .desktop-bg-off-white {
         background-color: var(--off-white);
+    }
+
+    .desktop-side-padding-50 {
+        padding: 0 50px;
     }
 }
