Post item to DynamoDB

--- a/sass/rsvp.sass
+++ b/sass/rsvp.sass
@@ -83,7 +83,7 @@ input[type="number"]
     filter: invert(66%) sepia(2%) saturate(4%) hue-rotate(338deg) brightness(94%) contrast(84%)
     cursor: pointer
 
-#allergy-input
+.wide-textarea
     width: 100%
 
 #flight-info
