--- a/templates/rsvp-section/single-textarea.html
+++ b/templates/rsvp-section/single-textarea.html
@@ -1,1 +1,1 @@
-<textarea id="allergy-input" rows="3">{{ data }}</textarea>
+<textarea id="{{ textarea_id }}" rows="3" class="wide-textarea">{{ data }}</textarea>
