--- a/templates/rsvp-section/whatsapp.html
+++ b/templates/rsvp-section/whatsapp.html
@@ -10,6 +10,8 @@
         <input
             type="tel"
             class="international-phone-number"
-            value="{{ phone_number }}">
+            value="{{ phone_number }}"
+            data-invitee="{{ invitee_name }}"
+            data-attribute="phone_number">
     {% endfor %}
 </section>
